--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -14,7 +14,7 @@ input {
 }
 
 h1 {
-  color: #7f6654;
+  color: #485e5e;
   text-align: left;
   font-size: 50px;
   font-weight: lighter;
@@ -60,17 +60,17 @@ h1 {
 .info {
   background-color: white;
   padding: 0px 20px 15px 20px;
-  border: 2px solid #7f6654;
+  border: 2px solid #739696;
   margin-bottom: 10px;
   width: 500px;
-  box-shadow: 4px 4px 4px #7f6654;
+  box-shadow: 4px 4px 4px #739696;
 }
 
 .info h2 {
-  color: #7f6654;
+  color: #485e5e;
   text-align: left;
   font-size: 20px;
-  font-weight: lighter;
+  font-weight: bold;
   margin-right: 10px;
 }
 
@@ -79,15 +79,15 @@ h1 {
   padding: 5px;
   line-height: 30px;
   font-size: 20px;
-  border: 1px solid #7f6654;
+  border: 1px solid #739696;
   background-color: white;
   margin: 5px 2px;
-  box-shadow: 4px 4px 4px #7f6654;
+  box-shadow: 4px 4px 4px #739696;
+  border-radius: 5px;
 }
 
 .remove-tag {
   padding: 0px 5px !important;
-  border-radius: 0 !important;
 }
 
 .split-page {
