Accounted for session user's relationship upon visiting a user's profile

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -80,7 +80,7 @@ h1 {
   line-height: 30px;
   font-size: 20px;
   border: 1px solid #739696;
-  background-color: white;
+  background-color: #cbeaea;
   margin: 5px 2px;
   box-shadow: 4px 4px 4px #739696;
   border-radius: 5px;
