--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -9,7 +9,7 @@
     <% include ./navbar %>
     <div class="center-content">
       <div>
-        <h2>Connect with <strong><%= user.name %></strong>?</h2>
+        <h2>Are you sure you would like to connect?</h2>
         <div id="button-container" data-id="<%= connectid %>"class="center-content">
           <div id="back" class="button-submit">Back</div>
           <div id="connect" class="button-submit">Connect</div>
