--- a/views/self-profile.ejs
+++ b/views/self-profile.ejs
@@ -55,7 +55,13 @@
               <div id="location-map"></div>
             </p>
           </div>
+
+
         </div>
+
+      </div>
+      <div id="delete-profile-container" class="center-content">
+        <div id="delete-profile" class="button-submit button-delete">Delete Account</div>
       </div>
     </div>
   </body>
