Fixed bugs with random connections generator

--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -72,7 +72,7 @@
     </div>
     <div class="center-content">
       <div class="match-info info">
-          <h1>Connections</h1>
+          <h1>Connections (<%= connections.length %>)</h1>
           <div class="container">
             <% for (let i = 0; i < connections.length; ++i) { %>
               <div class="profile" data-id="<%= connections[i]._id %>">
