--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,1 +1,3 @@
 <p>© Copyright 2017 Minder</p>
+<script src="/socket.io/socket.io.js"></script>
+<script src="javascripts/notifications.js"></script>
