--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,7 +1,18 @@
-<ul>
+<ul id="navbar">
   <li><a class="button-submit" href="discovery">Discover</a></li>
   <li><a class="button-submit" href="self-profile">My Profile</a></li>
   <li><a class="button-submit" href="messages">Messages</a></li>
   <li><a class="button-submit" href="connections">Connections</a></li>
   <li><a class="button-submit" href="logout">Logout</a></li>
 </ul>
+
+<div id="notification-container">
+  <!-- <img src="../images/elton.jpg" class="notification-user-icon"/>
+  <p class="notification-user-name">
+    <strong>Elton Xue</strong> has sent you a friend request
+  </p>
+  <div>
+    <div class="button accept">Accept</div>
+    <div class="button deny">Deny</div>
+  </div> -->
+</div>
