--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -18,8 +18,10 @@
               </li>
             </ul>
             <div id="messages-container">
-              <div id="messages">
+              <div id="messages-texts-container">
+                <ul id="messages">
 
+                </ul>
               </div>
               <div id="messages-input-container">
                 <input type="text" placeholder="To get started, enter a chat with a connection on the left" id="message-box" onKeyPress="onSend(event, this)"></input>
