--- a/public/stylesheets/messages.css
+++ b/public/stylesheets/messages.css
@@ -58,7 +58,7 @@ input {
   margin: 10px;
 }
 
-.users-message {
+.preview {
   display: -webkit-flex;
   display: flex;
   height: 100px;
@@ -67,28 +67,44 @@ input {
   margin: 10px 12px 10px 0px;
 }
 
-.users-message:hover {
+.preview:hover {
   cursor: pointer;
   background-color: #d1eced;
 }
 
+.preview-current {
+  background-color: #d1eced;
+  font-weight: bold;
+}
+
 #messages-container {
-  width: 750px;
+  position: relative;
+  overflow: none;
   height: 500px;
+  width: 750px;
   margin: 10px;
 }
 
-#messages {
-  padding-right: 15px;
-  height: 420px;
-  width: 700px;
+#messages-texts-container {
+  position: relative;
+  overflow: none;
+  height: 82%;
+  width: 100%;
   border: 1px solid #658585;
+  padding: 5px;
+}
+
+#messages {
+  position: absolute;
+  bottom: 0px;
+  padding-right: 15px;
+  width: 700px;
+  overflow: auto;
 }
 
 .message-item {
   display: flex;
   width: 100%;
-  margin: 5px 0px;
   padding: 5px 10px;
 }
 
@@ -116,6 +132,8 @@ input {
 }
 
 #messages-input-container {
+  position: absolute;
+  bottom: 25px;
   height: 50px;
   width: 715px;
   margin-top: 10px;
