--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -20,6 +20,7 @@
             <div id="messages-container">
               <div id="messages-texts-container">
                 <ul id="messages">
+                  <h2 id="unread-messages-title">Unread Messages</h2>
 
                 </ul>
               </div>
