--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -3,11 +3,13 @@
   <li><a class="button-submit" href="self-profile">My Profile</a></li>
   <li>
     <a id="unread-count" class="button-submit" href="messages">Messages
-      (<%= Object.values(user.unreadMessages).reduce(function(a, b) {return a + b}, 0) %>)
+      <% if (user.unreadMessages) { %>
+        (<%= Object.values(user.unreadMessages).reduce(function(a, b) {return a + b}, 0) %>)
+      <% } %>
     </a>
   </li>
   <li><a class="button-submit" href="connections">Connections</a></li>
-  <li><a class="button-submit" href="logout">Logout</a></li>
+  <li><a class="button-submit" href="users/logout">Logout</a></li>
 </ul>
 
 <div id="notification-container">
