--- a/views/signup-login-page.ejs
+++ b/views/signup-login-page.ejs
@@ -10,43 +10,45 @@
     <div class="center-content">
       <h2>Minder</h2>
     </div>
-    <div class="center-content">
-      <form id="login-form">
-        <div>
-          <label>Email</label>
-          <input id="login-email"></input>
-        </div>
-        <div>
-          <label>Password</label>
-          <input id="login-password" type="password"></input>
-        </div>
-        <div class="center-content">
-          <input type="submit" value="Login" id="login" class="button-submit"></input>
-        </div>
-      </form>
-    </div>
-    <div class="center-content">
-      <form id="signup-form">
-        <div>
-          <label>Name</label>
-          <input id="signup-name"></input>
-        </div>
-        <div>
-          <label>Email</label>
-          <input id="signup-email"></input>
-        </div>
-        <div>
-          <label>Password</label>
-          <input id="signup-password" type="password"></input>
-        </div>
-        <div>
-          <label>Confirm Password</label>
-          <input id="signup-confirm-password" type="password"></input>
-        </div>
-        <div class="center-content">
-          <input type="submit" value="Sign Up" id="signup" class="button-submit"></input>
-        </div>
-      </form>
+    <div id="authentication" class="center-content">
+      <div class="center-content">
+        <form id="login-form">
+          <div>
+            <label>Email</label>
+            <input id="login-email"></input>
+          </div>
+          <div>
+            <label>Password</label>
+            <input id="login-password" type="password"></input>
+          </div>
+          <div class="center-content">
+            <input type="submit" value="Login" id="login" class="button-submit"></input>
+          </div>
+        </form>
+      </div>
+      <div class="center-content">
+        <form id="signup-form">
+          <div>
+            <label>Name</label>
+            <input id="signup-name"></input>
+          </div>
+          <div>
+            <label>Email</label>
+            <input id="signup-email"></input>
+          </div>
+          <div>
+            <label>Password</label>
+            <input id="signup-password" type="password"></input>
+          </div>
+          <div>
+            <label>Confirm Password</label>
+            <input id="signup-confirm-password" type="password"></input>
+          </div>
+          <div class="center-content">
+            <input type="submit" value="Sign Up" id="signup" class="button-submit"></input>
+          </div>
+        </form>
+      </div>
     </div>
   </body>
   <footer>
